# COML_Hardware

./: README.md
COML_hardware/: .gitignore  README.md  append_tests.py  dynamics.py  generate_data.py  load_model.py  reg_p_analysis_plots.py  requirements.txt  test_accuracy.ipynb  test_plots.ipynb  test_z_up.ipynb  train.ipynb  train_local.sh  train_many1.sh  train_many2.sh  train_many3.sh  train_many4.sh  train_many5.sh  train_many_multi.sh  train_python.sh  train_single.sh  train_z_up.py  train_z_up_kR.py  utils.py  validate_model.ipynb  view_valid_loss.py  whiteboard.py  whiteboard2.py
COML_in_snap/: .gitattributes  .gitignore  2024-04-18-20-58-01.bag  README.md  requirements.txt  rospy_test.py
COML_in_snap/.catkin_tools/profiles/default/: devel_collisions.txt
COML_in_snap/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
COML_in_snap/devel/.private/acl_joy/: .catkin  local_setup.sh
COML_in_snap/devel/.private/behavior_selector/: .catkin  setup.sh
COML_in_snap/devel/.private/catkin_tools_prebuild/: .catkin  local_setup.sh
COML_in_snap/devel/.private/comm_monitor/: .catkin  .rosinstall  local_setup.sh  setup.sh
COML_in_snap/devel/.private/outer_loop/: .catkin  .rosinstall  local_setup.sh  setup.sh
COML_in_snap/devel/.private/outer_loop_python/: .catkin
COML_in_snap/devel/.private/snap/: .catkin
COML_in_snap/devel/.private/snap_sim/: .catkin  local_setup.sh  setup.sh
COML_in_snap/devel/.private/snapstack_msgs/: .catkin  .rosinstall
COML_in_snap/devel/.private/trajectory_generator/: .catkin  .rosinstall
COML_in_snap/devel/.private/trajectory_generator_python/: .catkin  .rosinstall  local_setup.sh  setup.sh
COML_in_snap/devel/include/adaptnotch/: adaptnotch.h
COML_in_snap/devel/include/behavior_selector/: MissionModeChange.h  MissionModeChangeRequest.h  MissionModeChangeResponse.h
COML_in_snap/devel/include/outer_loop/: OuterLoopConfig.h
COML_in_snap/devel/include/snapstack_msgs/: AttitudeCommand.h  CommAge.h  ControlLog.h  Goal.h  IMU.h  Motors.h  QuadFlightMode.h  SMCData.h  State.h  TimeFilter.h  VioFilterState.h  Wind.h
COML_in_snap/devel/lib/comm_monitor/: comm_monitor
COML_in_snap/devel/lib/outer_loop/: outer_loop
COML_in_snap/devel/lib/pkgconfig/: acl_joy.pc  snap.pc  (+9 more)
COML_in_snap/logs/snap/: build.cmake.000.log.stderr  build.make.000.log.stderr
COML_in_snap/logs/snap_sim/: build.make.000.log.stderr
COML_in_snap/src/: .rosinstall  .rosinstall.bak
COML_in_snap/src/acl_joy/: .snapsim.rosinstall  CMakeLists.txt  README.md  package.xml
COML_in_snap/src/behavior_selector/: CMakeLists.txt
COML_in_snap/src/comm_monitor/: CMakeLists.txt  README.md
COML_in_snap/src/outer_loop/: CMakeLists.txt  README.md
COML_in_snap/src/outer_loop_python/: CMakeLists.txt
COML_in_snap/src/snap/: .precond.sh  CMakeLists.txt  LICENSE  README.md
COML_in_snap/src/snap_sim/: CMakeLists.txt  README.md  package.xml
COML_in_snap/src/snap_sim/include/shims/: client.h  ipc_common.h  server.h
COML_in_snap/src/snap_sim/include/shims/esc_interface/: esc_datatypes.h  esc_interface.h
COML_in_snap/src/snap_sim/include/shims/sensor-imu/: sensor_datatypes.h  sensor_imu_api.h
COML_in_snap/src/snap_sim/include/snap_sim/: multirotor.h  physics_engine.h  rigid_body.h  snap_sim.h  tf2_helpers.h  utils.h
COML_in_snap/src/snap_sim/include/wind-dynamics/: dryden_model.h
COML_in_snap/src/snap_sim/include/wind-dynamics/utils/: modeling.h  support.h
COML_in_snap/src/snap_sim/launch/: real.launch  sim.launch
COML_in_snap/src/snap_sim/param/: HX.yaml  SQ.yaml
COML_in_snap/src/snap_sim/rviz/: default.rviz
COML_in_snap/src/snap_sim/src/: multirotor.cpp  physics_engine.cpp  rigid_body.cpp  snap_sim.cpp  snap_sim_node.cpp
COML_in_snap/src/snap_sim/src/shims/esc_interface/: esc_interface.cpp
COML_in_snap/src/snap_sim/src/shims/sensor-imu/: sensor_imu.cpp
COML_in_snap/src/snapstack_msgs/: CMakeLists.txt
COML_in_snap/src/trajectory_generator/: CMakeLists.txt  README.md
COML_in_snap/src/trajectory_generator/config/: default.rviz  default.yaml
COML_in_snap/src/trajectory_generator/include/trajectory_generator/: TrajectoryGenerator.hpp
COML_in_snap/src/trajectory_generator/include/trajectory_generator/trajectories/: Circle.hpp  Line.hpp  Trajectory.hpp
COML_in_snap/src/trajectory_generator/launch/: base_station.launch  onboard.launch
COML_in_snap/src/trajectory_generator/src/: TrajectoryGenerator.cpp  trajectory_generator_node.cpp
COML_in_snap/src/trajectory_generator/src/trajectories/: Circle.cpp  Line.cpp
COML_in_snap/src/trajectory_generator_python/: CMakeLists.txt
(+381 files in other folders)
