<?xml version="1.0"?>
<package format="2">
  <name>snap_sim</name>
  <version>0.0.0</version>
  <description>Multirotor dynamics simulation for snap stack</description>

  <maintainer email="markjcutler@todo.todo">mark cutler</maintainer>
  <maintainer email="parkerclusk@gmail.com">Parker Lusk</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>snapstack_msgs</depend>
  <depend>outer_loop</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
